<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="layout">LAYOUT EXERCISE</string>
    <string name="button">BUTTON EXERCISE</string>
    <string name="calculator">CALCULATOR</string>
    <string name="connect3">Connect 3</string>
    <string name="midterm">Midterm</string>
    <string name="passing_intents">Passing Intents</string>
    <string name="fragments">Fragments</string>
    <string name="menus">Menus</string>
    <string name="maps">Opening Maps</string>


    <string name="text1">Eren</string>
    <string name="text2">Armin</string>
    <string name="text3">Mikasa</string>
    <string name="text4">Levi</string>
    <string name="text5">Erwin</string>
    <string name="text6">Bertoroto</string>
    <string name="text7">Reiner</string>
    <string name="text8">Hange</string>
    <string name="text9">Pyxis</string>
    <string name="text10">Ymir</string>
    <string name="text11">Hannes</string>
    <string name="text12">Marco</string>
    <string name="text13">Sasha</string>

    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>


    <!--    button activity-->
    <string name="close">Close</string>
    <string name="toast">Toast</string>
    <string name="change_bg">Change BG</string>
    <string name="changeButton_bg">Change Button BG</string>
    <string name="disappear">Disappear</string>
    <string name="btnReturn">Return</string>


    <!--    calculator activity-->
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnDecimal">.</string>
    <string name="btnAdd">+</string>
    <string name="btnSubtract">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnEquals">=</string>
    <string name="btnDelete">DEL</string>
    <string name="btnAllClear">AC</string>


</resources>